<resources>
    <string name="app_name">Expense Manager</string>
    <string name="text_save_transaction">Save Transaction</string>
    <string name="text_ui_mode">UI Mode</string>
    <string name="text_total_income">Total Income</string>
    <string name="text_total_expense">Total Expense</string>
    <string name="text_total_balance">Total Balance</string>
    <string name="text_recent_transactions">Recent Transactions</string>
    <string name="text_view_all">View all</string>
    <string name="text_expense_when">When</string>
    <string name="text_expense_amount">Amount</string>
    <string name="text_expense_transaction_type">Transaction type</string>
    <string name="text_expense_tag">Tag</string>
    <string name="text_expense_note">Note</string>
    <string name="text_expense_add_transaction">Save Transaction</string>
    <string name="text_expense_rupees">$</string>
    <string name="success_expense_saved">Transaction saved successfully</string>
    <string name="success_expense_deleted">Transaction deleted successfully</string>
    <string name="success_transaction_delete">Transaction deleted successfully!</string>
    <string name="text_title">Title</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_about">About</string>
    <string name="text_filter">Filter</string>
    <string name="text_edit">Edit</string>
    <string name="text_createdAt">Created At</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="bonus">Bonus</string>
    <string name="entertainment">Entertainment</string>
    <string name="food">Food</string>
    <string name="housing">Housing</string>
    <string name="healthcare">Healthcare</string>
    <string name="insurance">Insurance</string>
    <string name="personal_spending">Personal Spending</string>
    <string name="salary">Salary</string>
    <string name="saving">Saving &amp; Debts</string>
    <string name="transportation">Transportation</string>
    <string name="utilities">Utilities</string>
    <string name="other">Others</string>

    <!--  Share -->
    <string name="success_transaction_export">Transaction exported successfully!</string>
    <string name="failed_transaction_export">Transaction exported failed ☹️</string>
    <string name="text_error">Transaction exported failed ☹️</string>
    <string name="support_pending">Support for export on Android10+ is still in progress, kindly be patient and thanks for support!</string>
    <string name="text_open">Open</string>

    <!--  About -->
    <string name="text_about_visit_title">Visit</string>
    <string name="text_app_version">v%s (%d)</string>
    <string name="text_share_as_text">Share as Text</string>
    <string name="text_share_as_image">Share as Image</string>
    <string name="text_delete">Delete</string>
    <string name="text_share">Share</string>

    <!-- share transaction -->
    <string name="share_message">\%s \nAmount: %s, \nTransaction-Type: %s, \nTag: %s, \nDate: %s, \nNote: %s, \nCreatedAt: %s </string>
    <string name="text_transaction_empty_title">No Transaction Yet!</string>
    <string name="text_transaction_empty_desc">After your first transaction you will be able to view it here</string>
    <string name="text_export_csv">Export to CSV</string>
    <string name="text_add_transaction">Add Transaction</string>
    <string name="text_undo">Undo</string>
    <string name="text_error_occurred">Error occurred!</string>
    <string name="title_must_not_be_empty">Title must not be empty</string>
    <string name="amount_must_not_be_empty">Amount must not be empty</string>
    <string name="tag_must_not_be_empty">Please select category</string>
    <string name="date_must_not_be_empty">Date must not be empty</string>
    <string name="note_must_not_be_empty">Note must not be empty</string>
    <string name="select_transaction_type">Please select transaction type</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="image_share_failed">Image share failed!</string>
    <string name="you_have_to_enable_storage_permission_to_share_transaction_as_image">You have to enable storage permission to share transaction as Image</string>

    <!--Ad mob Ads Id Setup-->
    <string name="app_id">ca-app-pub-2874087806277205~9651464709</string>
    <string name="expense_banner">ca-app-pub-2874087806277205/6909751293</string>

    <!--    admob testing ID's     -->
    <!--    <string name="expense_banner">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>-->

</resources>
