<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="clickListener"
            type="com.droidgeeks.expensemanager.view.details.listener.ITransactionDetail" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.droidgeeks.expensemanager.view.details.TransactionDetailsFragment">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/transactionDetails"
                layout="@layout/content_transaction_details" />


            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/delete_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_margin="@dimen/dimen_24"
                android:contentDescription="@string/app_name"
                android:onClick="@{()->clickListener.onClickDelete()}"
                android:text="@string/text_delete"
                android:textColor="@color/white"
                app:backgroundTint="@color/expense"
                app:borderWidth="0dp"
                app:icon="@drawable/ic_delete"
                app:iconTint="@color/white" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/edit_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/dimen_24"
                android:contentDescription="@string/app_name"
                android:onClick="@{()->clickListener.onClickEdit()}"
                android:text="@string/text_edit"
                android:textColor="@color/white"
                app:backgroundTint="@color/blue_500"
                app:borderWidth="0dp"
                app:icon="@drawable/ic_edit"
                app:iconTint="@color/white" />


        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </FrameLayout>
</layout>
